--- a/index.html
+++ b/index.html
@@ -9,46 +9,123 @@
 <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <!--LINK CSS-->
     <link rel="stylesheet" href="style.css">
-    
+    <!--LINK BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <title>Verifica Blog Page</title>
 </head>
 <body>
+    <header>
+        <div class="container text-center">
+            <h1> ESTATE '24</h1>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div class="row">    
+                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mt-5">
+                        <div class="card-body">
+                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
+                            <h5 class="card-title">Card 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
+                            <img src="./img/pin.svg" alt="" id="pin">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mt-5">
+                        <div class="card-body"> 
+                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
+                            <h5 class="card-title">Card 2</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <img src="./img/pin.svg" alt="" id="pin">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mt-5">
+                        <div class="card-body"> 
+                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
+                            <h5 class="card-title">Card 3</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <img src="./img/pin.svg" alt="" id="pin">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mt-5">
+                        <div class="card-body"> 
+                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
+                            <h5 class="card-title">Card 4</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <img src="./img/pin.svg" alt="" id="pin">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mt-5">
+                        <div class="card-body"> 
+                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
+                            <h5 class="card-title">Card 5</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <img src="./img/pin.svg" alt="" id="pin">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mt-5">
+                        <div class="card-body"> 
+                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
+                            <h5 class="card-title">Card 6</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <img src="./img/pin.svg" alt="" id="pin">
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </div> 
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="script.js"></script>
+</body>
+<!--TEST SENZA BOOTSTRAP-->
+<!--<body>
     <header class="h-container">
         <h1>ESTATE '24</h1>
     </header>
     <main>
         <div class="full-container">
-            <div class="photo-box">
+            <div class="photo-box col-30">
                 <div class="box-picture">
                     <img src="" alt="">
                     <span>Blablabla</span>
                 </div>
             </div>
-            <div class="photo-box">
+            <div class="photo-box col-30">
                 <div class="box-picture">
                     <img src="" alt="">
                     <span>Blablabla</span>
                 </div>
             </div>
-            <div class="photo-box">
+            <div class="photo-box col-30">
                 <div class="box-picture">
                     <img src="" alt="">
                     <span>Blablabla</span>
                 </div>
             </div>
-            <div class="photo-box">
+            <div class="photo-box col-30">
                 <div class="box-picture">
                     <img src="" alt="">
                     <span>Blablabla</span>
                 </div>
             </div>
-            <div class="photo-box">
+            <div class="photo-box col-30">
                 <div class="box-picture">
                     <img src="" alt="">
                     <span>Blablabla</span>
                 </div>
             </div>
-            <div class="photo-box">
+            <div class="photo-box col-30">
                 <div class="box-picture">
                     <img src="" alt="">
                     <span>Blablabla</span>
@@ -56,5 +133,5 @@
             </div>
         </div>
     </main>
-</body>
+</body>-->
 </html>
