[UPD] Finished first-day

--- a/index.html
+++ b/index.html
@@ -21,117 +21,24 @@
     </header>
     <main>
         <div class="container">
-            <div class="row">    
-                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+            <div class="row" id="api-cont">
+                <!--QUI SCRIPT COMMENT-->
+                <!--<div class="col-12 col-lg-4 col-md-6 col-sm-12">
                     <div class="card mt-5">
                         <div class="card-body">
                             <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
                             <h5 class="card-title">Card 1</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
-                            <img src="./img/pin.svg" alt="" id="pin">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5">
-                        <div class="card-body"> 
-                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
-                            <h5 class="card-title">Card 2</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <img src="./img/pin.svg" alt="" id="pin">
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5">
-                        <div class="card-body"> 
-                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
-                            <h5 class="card-title">Card 3</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <img src="./img/pin.svg" alt="" id="pin">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5">
-                        <div class="card-body"> 
-                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
-                            <h5 class="card-title">Card 4</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <img src="./img/pin.svg" alt="" id="pin">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5">
-                        <div class="card-body"> 
-                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
-                            <h5 class="card-title">Card 5</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <img src="./img/pin.svg" alt="" id="pin">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5">
-                        <div class="card-body"> 
-                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
-                            <h5 class="card-title">Card 6</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <img src="./img/pin.svg" alt="" id="pin">
-                        </div>
-                    </div>
-                </div>
-            </div>
-         </div> 
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
-</body>
-<!--TEST SENZA BOOTSTRAP-->
-<!--<body>
-    <header class="h-container">
-        <h1>ESTATE '24</h1>
-    </header>
-    <main>
-        <div class="full-container">
-            <div class="photo-box col-30">
-                <div class="box-picture">
-                    <img src="" alt="">
-                    <span>Blablabla</span>
-                </div>
-            </div>
-            <div class="photo-box col-30">
-                <div class="box-picture">
-                    <img src="" alt="">
-                    <span>Blablabla</span>
-                </div>
-            </div>
-            <div class="photo-box col-30">
-                <div class="box-picture">
-                    <img src="" alt="">
-                    <span>Blablabla</span>
-                </div>
-            </div>
-            <div class="photo-box col-30">
-                <div class="box-picture">
-                    <img src="" alt="">
-                    <span>Blablabla</span>
-                </div>
-            </div>
-            <div class="photo-box col-30">
-                <div class="box-picture">
-                    <img src="" alt="">
-                    <span>Blablabla</span>
-                </div>
-            </div>
-            <div class="photo-box col-30">
-                <div class="box-picture">
-                    <img src="" alt="">
-                    <span>Blablabla</span>
-                </div>
+                -->
             </div>
         </div>
     </main>
-</body>-->
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="script.js"></script>
+</body>
 </html>
