[UPD] Aggiunta html overlay

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
                 -->
             </div>
         </div>
+
+        <!--CREAZIONE OVERLAY-->
+        <div class="overlay d-flex flex-wrap justify-content-center overlay-hidden">
+            <div id="overlay-btn-container" class="col-100 d-flex justify-content-center align-items-center">
+                <button class="close">Indietro</button>
+            </div>
+            <div id="overlay-box" class="col-100 d-flex justify-content-center align-items-center">
+                <img src="#" alt="">
+            </div>
+        </div>
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
