--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
                 <button class="close">Indietro</button>
             </div>
             <div id="overlay-box" class="col-100 d-flex justify-content-center align-items-center">
-                <img src="#" alt="">
+                <img src="https://picsum.photos/id/1/380/380" alt="">
             </div>
         </div>
 
     </main>
 
+    <!--ALL SCRIPTS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
