--- a/index.html
+++ b/index.html
@@ -22,29 +22,15 @@
     <main>
         <div class="container">
             <div class="row" id="api-cont">
-                <!--QUI SCRIPT COMMENT-->
-                <!--<div class="col-12 col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5">
-                        <div class="card-body">
-                            <img src="https://picsum.photos/id/1/380/380" alt="" class="img-fluid">
-                            <h5 class="card-title">Card 1</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <img src="./img/pin.svg" alt="" id="pin">
-                        </div>
-                    </div>
-                </div>
-                -->
+                <!--INSERIMENTO AUTOMATICO SCRIPT CARD-->
+
             </div>
         </div>
 
         <!--CREAZIONE OVERLAY-->
-        <div class="overlay d-flex flex-wrap justify-content-center overlay-hidden">
-            <div id="overlay-btn-container" class="col-100 d-flex justify-content-center align-items-center">
-                <button class="close">Indietro</button>
-            </div>
-            <div id="overlay-box" class="col-100 d-flex justify-content-center align-items-center">
-                <img src="https://picsum.photos/id/1/380/380" alt="">
-            </div>
+        <div id="overlay" class="ov-box">
+            <img id="img-overlay" src="">
+            <button id="overlay-button">Indietro</button>
         </div>
 
     </main>
